--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,31 @@
 <!doctype html>
+
 <html lang="en">
+
 <head>
-  	<meta charset="UTF-8" />
-  	<title> p4 | Kat Taylor</title>
+
+  <meta charset="UTF-8" />
+
+  <title>p1-bio | Kat Taylor</title>
 	
- 	<link rel="icon" href="favicon.ico">	
+  <link rel="icon" href="favicon.ico">	
  
-  	<link rel="stylesheet" href="css/normalize.css">				
-   	<link rel="stylesheet" href="css/styles.css">	
+  <link rel="stylesheet" href="css/normalize.css">
 
-   	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/grid.css">	
 
-  	<link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
-	
-</head>
+  <link rel="stylesheet" href="css/styles.css">	
 
-<body id="core">
+  <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+
+  <link href='http://fonts.googleapis.com/css?family=Megrim' rel='stylesheet' type='text/css'>
+
 	
-	
+</head> 
+
+<body>
+
+	<div class="container">
 
 		<section class="heading">
 
@@ -29,17 +37,14 @@
 
 		</section>
 
+	
 <!-- Nav -->
 
-		<ul class="nav grid_12 alpha">
+		<ul class="nav grid_12 alpha omega">
 
-          	<a href="#"><li>Resume</li></a> 
+          	<a href="resume.html"><li>Resume</li></a> 
 
-          	<a href="#"><li>Portfolio</li></a>
-
-          	<a href="https://github.com/kathryntaylor11"><li>Github</li></a>
-
-          	<a href="http://saiphandsound.tumblr.com/"><li>Tumblr</li></a>  
+          	<a href="portfolio.html"><li>Portfolio</li></a>
 
         </ul> 
 		
