--- a/resume.html
+++ b/resume.html
@@ -46,6 +46,10 @@
 
           	<a href="https://www.flickr.com/photos/127334110@N05/"><li>Flickr</li></a>
 
+          	<a href="index.html"><li>About</li></a>
+
+          	<a href="portfolio.html"><li>Portfolio</li></a>
+
           	<a href="https://twitter.com/saiphandsound"><li>Twitter</li></a>
 
           	<a href="http://saiphandsound.tumblr.com/"><li>Tumblr</li></a>  
