--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 
 		<ul class="nav grid_12 alpha omega">
 
-          	<a href="resume.html"><li>Resume</li></a> 
+          	<a href="about.html"><li>About/li></a> 
 
           	<a href="portfolio.html"><li>Portfolio</li></a>
 
