--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,17 @@
 
 		<ul class="nav grid_12 alpha omega">
 
-          	<a href="about.html"><li>About</li></a> 
+			<a href="https://github.com/kathryntaylor11"><li>Github</li></a> 
 
-          	<a href="portfolio.html"><li>Portfolio</li></a>
+          	<a href="https://www.flickr.com/photos/127334110@N05/"><li>Flickr</li></a>
+
+          	<a href="index.html"><li>About</li></a> 
+
+          	<a href="resume.html"><li>Resume</li></a>
+
+          	<a href="https://twitter.com/saiphandsound"><li>Twitter</li></a>
+
+          	<a href="http://saiphandsound.tumblr.com/"><li>Tumblr</li></a>
 
         </ul> 
 		
