--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,7 @@
 
 			<h3>Eastern Washington University</h3>
 			<p>Graduated Spring 2015</p>
+			<p>BA Fine Art (Digital Painting) | Visual Communication and Design Minor</p>
 		
 
 	</section>
