--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,8 @@
 
 			<h3>Eastern Washington University</h3>
 			<p>Graduated Spring 2015</p>
-			<p>BA Fine Art (Digital Painting) | Visual Communication and Design Minor</p>
+			<p>BA Fine Art (Digital Painting)</p>
+			<p> Visual Communication and Design Minor</p>
 		
 
 	</section>
