--- a/portfolio.html
+++ b/portfolio.html
@@ -121,57 +121,8 @@
 		        	</a>
 		     	</div>
 		     </section>
-		</div>
 
-		<section>
-		      	<a href="#pic5">
-		        	<img src="img/russellmini.png" alt="Russell Wilson Small">
-		        </a>
-
-		      	<div id="pic5">
-		        	<a href="#core">
-		          		<img src="img/russell.png" alt="Russell Wilson">
-		        	</a>
-		     	</div>
-		     </section>
-
-		     <section class="a">
-		      	<a href="#pic6">
-		        	<img src="img/daemonamini.png" alt="Daemona Small">
-		        </a>
-
-		      	<div id="pic6">
-		        	<a href="#core">
-		          		<img src="img/daemona.png" alt="Daemona">
-		        	</a>
-		     	</div>
-		     </section>
-
-		     <section class="b">
-		      	<a href="#pic7">
-		        	<img src="img/lightningmini.png" alt="Lightning Small">
-		        </a>
-
-		      	<div id="pic7">
-		        	<a href="#core">
-		          		<img src="img/lightning.png" alt="Lighting">
-		        	</a>
-		     	</div>
-		     </section>
-
-		     <section class="c">
-		      	<a href="#pic8">
-		        	<img src="img/pearlmini.png" alt="Pearl Small">
-		        </a>
-
-		      	<div id="pic8">
-		        	<a href="#core">
-		          		<img src="img/pearl.png" alt="Pearl">
-		        	</a>
-		     	</div>
-		     </section>
-
-		     <section class="d">
+		     <section class="snow">
 		      	<a href="#pic9">
 		        	<img src="img/snowmini.png" alt="Snow Small">
 		        </a>
@@ -183,17 +134,7 @@
 		     	</div>
 		     </section>
 
-		     <section class="e">
-		      	<a href="#pic10">
-		        	<img src="img/supermini.png" alt="Super Small">
-		        </a>
-
-		      	<div id="pic10">
-		        	<a href="#core">
-		          		<img src="img/super.png" alt="Super">
-		        	</a>
-		     	</div>
-		     </section>
+		</div>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
